--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Ireland -- History -- 16th century'
 - !lcc 'DA'
+- GITenberg
 title: Ireland under the Tudors, with a Succinct Account of the Earlier History. Vol.
   1 (of 3)
 url: http://www.gutenberg.org/ebooks/42046
